--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+u<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Animated Website</title>
+  <title>Edu_read</title>
   <style>
     body, html {
       margin: 0;
@@ -41,7 +41,7 @@
     }
 
     h1 {
-      font-size: 3em;
+      font-size: 2em;
     }
 
     p {
